Bug 1773605 - [Regression] Fix the folder copy playback timer handling r=benc

Differential Revision: https://phabricator.services.mozilla.com/D148986

--HG--
extra : rebase_source : 30166115a91ad7fa0fe390bcae35998949d20962